src/main/kotlin/com/example/bak/global/error/CustomException.kt
package com.example.bak.global.error

open class CustomException(
    val errorCode: ErrorCode
) : RuntimeException(errorCode.message)